# forge-engineering

./: .gitignore  README.md
prototypes/config-forge/: README.md  algebra.py  bench.py  demo.py  demo_v2.py  forge.py  reflect.py  runner.py  search.py
prototypes/config-forge/tests/: conftest.py  test_forge.py
prototypes/forge-v0/: README.md  cli.py  pyproject.toml
prototypes/forge-v0/bench/fixed/: lite.yaml
prototypes/forge-v0/demo/: CLAUDE.md.initial  sample_task_fix_tests.md  sample_task_t01.md  sample_task_t02.md  scenario.md
prototypes/forge-v0/demo/sample_repo/: CLAUDE.md  README.md  pyproject.toml
prototypes/forge-v0/demo/sample_repo/src/sample_app/: __init__.py  numbers.py
prototypes/forge-v0/demo/sample_repo/tests/: test_numbers.py
prototypes/forge-v0/ontology/: core.ttl  invariants.json
prototypes/forge-v0/runner/: runner.py
prototypes/forge-v0/safety/: inertia_brake.py
prototypes/forge-v0/schemas/: reflection.v1.json  rewrite.v1.json  run.v1.json
prototypes/forge-v0/smith/: _llm.py  furnace.py  hammer.py  ontology_gate.py  rewriter.py  tempering.py  validator.py
research/: harness-engineering.md  self-improving-agents.md
spec/: CONFIG-FORGE.md  FORGE.md
