[project]
name = "forge-v0"
version = "0.1.0"
description = "Minimum Working Forge — reference implementation of Forge Engineering dual-loop."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0",
]

[project.scripts]
forge = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
